# WeeklyAssignments

./: Assignment11_8_2_24.ipynb  WeeklyAssignment2.ipynb  WeeklyAssignment3(TicTacToe).ipynb  WeeklyAssignment4.ipynb  WeeklyAssignment6(ML).ipynb  WeeklyAssignment7(ML).ipynb  Weekly_assignment (1).ipynb  Weekly_assignment(revised).ipynb
Assignment_fastAPI/heart-disease-api/: pyproject.toml
Assignment_fastAPI/heart-disease-api/dockerfiles/: Dockerfile  docker-compose.yml
Assignment_fastAPI/heart-disease-api/ml_deployment/: heartdiseaseapp.py
Assignment_fastAPI/heart-disease-api/ml_deployment/config/v1/: __init__.py  database_confi.py
Assignment_fastAPI/heart-disease-api/ml_deployment/datafiles/: Classifier_HeartDisease.pkl  Classifier_HeartDisease_2.pkl  Classifier_HeartDisease_3.pkl  scaling(2).pkl  scaling.pkl
Assignment_fastAPI/heart-disease-api/ml_deployment/models/: mongodata.py  pydantic_model.py
Assignment_fastAPI/heart-disease-api/ml_deployment/utils/v1/: pickled_files.py  preprocessing.py
Assignment_fastAPI/heart-disease-api/notebooks/: EDA.ipynb  FastApiAssignment(HeartDiseaseprediction).ipynb  models_used.ipynb
WeeklyAssignment5/TaskManager/: db.sqlite3
WeeklyAssignment5/TaskManager/TaskManagementSystem/: admin.py  apps.py  forms.py  models.py  taskform.py  urls.py  views.py
WeeklyAssignment5/TaskManager/TaskManagementSystem/migrations/: 0001_initial.py  0002_task_group.py  0003_alter_task_options.py  0004_alter_task_options.py
WeeklyAssignment5/TaskManager/TaskManager/: settings.py  urls.py
(+6 files in other folders)
